--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.58.3"
+    "react-slick": "^0.29.0",
+    "sass": "^1.58.3",
+    "slick-carousel": "^1.8.1"
   }
 }
